Run code cleanup.