@@ -347,23 +347,18 @@ public class StringFuncs implements Constants {
      * @nowebref
      */
     static public String[] loadStrings(InputStream input) {
-        try {
-            BufferedReader reader = new BufferedReader(new InputStreamReader(input, "UTF-8"));
-            return loadStrings(reader);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return null;
+        BufferedReader reader = new BufferedReader(new InputStreamReader(input, StandardCharsets.UTF_8));
+        return loadStrings(reader);
     }
 
     static public String[] loadStrings(BufferedReader reader) {
         try {
-            String lines[] = new String[100];
+            String[] lines = new String[100];
             int lineCount = 0;
             String line = null;
             while ((line = reader.readLine()) != null) {
                 if (lineCount == lines.length) {
-                    String temp[] = new String[lineCount << 1];
+                    String[] temp = new String[lineCount << 1];
                     System.arraycopy(lines, 0, temp, 0, lineCount);
                     lines = temp;
                 }
@@ -376,7 +371,7 @@ public class StringFuncs implements Constants {
             }
 
             // resize array to appropriate amount for these lines
-            String output[] = new String[lineCount];
+            String[] output = new String[lineCount];
             System.arraycopy(lines, 0, output, 0, lineCount);
             return output;
 
@@ -542,7 +537,7 @@ public class StringFuncs implements Constants {
     /**
      * @nowebref
      */
-    static public void saveStrings(File file, String data[]) {
+    static public void saveStrings(File file, String[] data) {
         saveStrings(createOutput(file), data);
     }
 
@@ -668,11 +663,7 @@ public class StringFuncs implements Constants {
     //
 
     static public String urlEncode(String str) {
-        try {
-            return URLEncoder.encode(str, "UTF-8");
-        } catch (UnsupportedEncodingException e) { // oh c'mon
-            return null;
-        }
+        return URLEncoder.encode(str, StandardCharsets.UTF_8);
     }
 
     // DO NOT use for file paths, URLDecoder can't handle RFC2396
@@ -681,11 +672,7 @@ public class StringFuncs implements Constants {
     // using toURI() and URI.toURL()."
     // https://docs.oracle.com/javase/8/docs/api/java/net/URL.html
     static public String urlDecode(String str) {
-        try {
-            return URLDecoder.decode(str, "UTF-8");
-        } catch (UnsupportedEncodingException e) { // safe per the JDK source
-            return null;
-        }
+        return URLDecoder.decode(str, StandardCharsets.UTF_8);
     }
 
     /**
@@ -705,7 +692,7 @@ public class StringFuncs implements Constants {
      * @webref data:array_functions
      * @see StringFuncs#reverse(boolean[])
      */
-    static public byte[] sort(byte list[]) {
+    static public byte[] sort(byte[] list) {
         return sort(list, list.length);
     }
 
@@ -721,7 +708,7 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static public char[] sort(char list[]) {
+    static public char[] sort(char[] list) {
         return sort(list, list.length);
     }
 
@@ -732,7 +719,7 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static public int[] sort(int list[]) {
+    static public int[] sort(int[] list) {
         return sort(list, list.length);
     }
 
@@ -743,7 +730,7 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static public float[] sort(float list[]) {
+    static public float[] sort(float[] list) {
         return sort(list, list.length);
     }
 
@@ -763,7 +750,7 @@ public class StringFuncs implements Constants {
 
     // public String inputPath(String where) {
     // }
-    static public String[] sort(String list[]) {
+    static public String[] sort(String[] list) {
         return sort(list, list.length);
     }
 
@@ -781,7 +768,7 @@ public class StringFuncs implements Constants {
             return null;
         // return split(what, String.valueOf(delim)); // huh
 
-        char chars[] = value.toCharArray();
+        char[] chars = value.toCharArray();
         int splitCount = 0; // 1;
         for (int i = 0; i < chars.length; i++) {
             if (chars[i] == delim)
@@ -794,12 +781,12 @@ public class StringFuncs implements Constants {
         // on second thought, i don't agree with this, will disable
         // }
         if (splitCount == 0) {
-            String splits[] = new String[1];
+            String[] splits = new String[1];
             splits[0] = value;
             return splits;
         }
         // int pieceCount = splitCount + 1;
-        String splits[] = new String[splitCount + 1];
+        String[] splits = new String[splitCount + 1];
         int splitIndex = 0;
         int startIndex = 0;
         for (int i = 0; i < chars.length; i++) {
@@ -995,16 +982,16 @@ public class StringFuncs implements Constants {
      *
      * @return array of boolean elements
      */
-    static final public boolean[] parseBoolean(int what[]) {
-        boolean outgoing[] = new boolean[what.length];
+    static final public boolean[] parseBoolean(int[] what) {
+        boolean[] outgoing = new boolean[what.length];
         for (int i = 0; i < what.length; i++) {
             outgoing[i] = (what[i] != 0);
         }
         return outgoing;
     }
 
-    static final public boolean[] parseBoolean(String what[]) {
-        boolean outgoing[] = new boolean[what.length];
+    static final public boolean[] parseBoolean(String[] what) {
+        boolean[] outgoing = new boolean[what.length];
         for (int i = 0; i < what.length; i++) {
             outgoing[i] = Boolean.parseBoolean(what[i]);
         }
@@ -1027,32 +1014,32 @@ public class StringFuncs implements Constants {
         return (byte) what;
     }
 
-    static final public byte[] parseByte(boolean what[]) {
-        byte outgoing[] = new byte[what.length];
+    static final public byte[] parseByte(boolean[] what) {
+        byte[] outgoing = new byte[what.length];
         for (int i = 0; i < what.length; i++) {
             outgoing[i] = what[i] ? (byte) 1 : 0;
         }
         return outgoing;
     }
 
-    static final public byte[] parseByte(char what[]) {
-        byte outgoing[] = new byte[what.length];
+    static final public byte[] parseByte(char[] what) {
+        byte[] outgoing = new byte[what.length];
         for (int i = 0; i < what.length; i++) {
             outgoing[i] = (byte) what[i];
         }
         return outgoing;
     }
 
-    static final public byte[] parseByte(int what[]) {
-        byte outgoing[] = new byte[what.length];
+    static final public byte[] parseByte(int[] what) {
+        byte[] outgoing = new byte[what.length];
         for (int i = 0; i < what.length; i++) {
             outgoing[i] = (byte) what[i];
         }
         return outgoing;
     }
 
-    static final public byte[] parseByte(float what[]) {
-        byte outgoing[] = new byte[what.length];
+    static final public byte[] parseByte(float[] what) {
+        byte[] outgoing = new byte[what.length];
         for (int i = 0; i < what.length; i++) {
             outgoing[i] = (byte) what[i];
         }
@@ -1080,8 +1067,8 @@ public class StringFuncs implements Constants {
      * return ((what == 't') || (what == 'T') || (what == '1'));
      * }
      */
-    static final public char[] parseChar(byte what[]) {
-        char outgoing[] = new char[what.length];
+    static final public char[] parseChar(byte[] what) {
+        char[] outgoing = new char[what.length];
         for (int i = 0; i < what.length; i++) {
             outgoing[i] = (char) (what[i] & 0xff);
         }
@@ -1095,8 +1082,8 @@ public class StringFuncs implements Constants {
      * }
      */
 
-    static final public char[] parseChar(int what[]) {
-        char outgoing[] = new char[what.length];
+    static final public char[] parseChar(int[] what) {
+        char[] outgoing = new char[what.length];
         for (int i = 0; i < what.length; i++) {
             outgoing[i] = (char) what[i];
         }
@@ -1206,32 +1193,32 @@ public class StringFuncs implements Constants {
 
     // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
-    static final public int[] parseInt(boolean what[]) {
-        int list[] = new int[what.length];
+    static final public int[] parseInt(boolean[] what) {
+        int[] list = new int[what.length];
         for (int i = 0; i < what.length; i++) {
             list[i] = what[i] ? 1 : 0;
         }
         return list;
     }
 
-    static final public int[] parseInt(byte what[]) { // note this unsigns
-        int list[] = new int[what.length];
+    static final public int[] parseInt(byte[] what) { // note this unsigns
+        int[] list = new int[what.length];
         for (int i = 0; i < what.length; i++) {
             list[i] = (what[i] & 0xff);
         }
         return list;
     }
 
-    static final public int[] parseInt(char what[]) {
-        int list[] = new int[what.length];
+    static final public int[] parseInt(char[] what) {
+        int[] list = new int[what.length];
         for (int i = 0; i < what.length; i++) {
             list[i] = what[i];
         }
         return list;
     }
 
-    static public int[] parseInt(float what[]) {
-        int inties[] = new int[what.length];
+    static public int[] parseInt(float[] what) {
+        int[] inties = new int[what.length];
         for (int i = 0; i < what.length; i++) {
             inties[i] = (int) what[i];
         }
@@ -1265,7 +1252,7 @@ public class StringFuncs implements Constants {
      * <p>
      * numbers will contain { 1, 300, 44 }
      */
-    static public int[] parseInt(String what[]) {
+    static public int[] parseInt(String[] what) {
         return parseInt(what, 0);
     }
 
@@ -1279,8 +1266,8 @@ public class StringFuncs implements Constants {
      * <p>
      * numbers will contain { 1, 300, 9999, 44 }
      */
-    static public int[] parseInt(String what[], int missing) {
-        int output[] = new int[what.length];
+    static public int[] parseInt(String[] what, int missing) {
+        int[] output = new int[what.length];
         for (int i = 0; i < what.length; i++) {
             try {
                 output[i] = Integer.parseInt(what[i]);
@@ -1354,28 +1341,28 @@ public class StringFuncs implements Constants {
         return otherwise;
     }
 
-    static final public float[] parseFloat(byte what[]) {
-        float floaties[] = new float[what.length];
+    static final public float[] parseFloat(byte[] what) {
+        float[] floaties = new float[what.length];
         for (int i = 0; i < what.length; i++) {
             floaties[i] = what[i];
         }
         return floaties;
     }
 
-    static final public float[] parseFloat(int what[]) {
-        float floaties[] = new float[what.length];
+    static final public float[] parseFloat(int[] what) {
+        float[] floaties = new float[what.length];
         for (int i = 0; i < what.length; i++) {
             floaties[i] = what[i];
         }
         return floaties;
     }
 
-    static final public float[] parseFloat(String what[]) {
+    static final public float[] parseFloat(String[] what) {
         return parseFloat(what, Float.NaN);
     }
 
-    static final public float[] parseFloat(String what[], float missing) {
-        float output[] = new float[what.length];
+    static final public float[] parseFloat(String[] what, float missing) {
+        float[] output = new float[what.length];
         for (int i = 0; i < what.length; i++) {
             try {
                 output[i] = Float.parseFloat(what[i]);
@@ -1408,15 +1395,15 @@ public class StringFuncs implements Constants {
         return String.valueOf(x);
     }
 
-    static final public String[] str(boolean x[]) {
-        String s[] = new String[x.length];
+    static final public String[] str(boolean[] x) {
+        String[] s = new String[x.length];
         for (int i = 0; i < x.length; i++)
             s[i] = String.valueOf(x[i]);
         return s;
     }
 
-    static final public String[] str(byte x[]) {
-        String s[] = new String[x.length];
+    static final public String[] str(byte[] x) {
+        String[] s = new String[x.length];
         for (int i = 0; i < x.length; i++)
             s[i] = String.valueOf(x[i]);
         return s;
@@ -1430,22 +1417,22 @@ public class StringFuncs implements Constants {
      * }
      */
 
-    static final public String[] str(char x[]) {
-        String s[] = new String[x.length];
+    static final public String[] str(char[] x) {
+        String[] s = new String[x.length];
         for (int i = 0; i < x.length; i++)
             s[i] = String.valueOf(x[i]);
         return s;
     }
 
-    static final public String[] str(int x[]) {
-        String s[] = new String[x.length];
+    static final public String[] str(int[] x) {
+        String[] s = new String[x.length];
         for (int i = 0; i < x.length; i++)
             s[i] = String.valueOf(x[i]);
         return s;
     }
 
-    static final public String[] str(float x[]) {
-        String s[] = new String[x.length];
+    static final public String[] str(float[] x) {
+        String[] s = new String[x.length];
         for (int i = 0; i < x.length; i++)
             s[i] = String.valueOf(x[i]);
         return s;
@@ -1514,8 +1501,8 @@ public class StringFuncs implements Constants {
      *      "https://processing.org/reference/intconvert_.html">int(float)</a>
      */
 
-    static public String[] nf(int nums[], int digits) {
-        String formatted[] = new String[nums.length];
+    static public String[] nf(int[] nums, int digits) {
+        String[] formatted = new String[nums.length];
         for (int i = 0; i < formatted.length; i++) {
             formatted[i] = nf(nums[i], digits);
         }
@@ -1562,8 +1549,8 @@ public class StringFuncs implements Constants {
      * @see StringFuncs#nfp(float, int, int)
      * @see StringFuncs#nfs(float, int, int)
      */
-    static public String[] nfc(int nums[]) {
-        String formatted[] = new String[nums.length];
+    static public String[] nfc(int[] nums) {
+        String[] formatted = new String[nums.length];
         for (int i = 0; i < formatted.length; i++) {
             formatted[i] = nfc(nums[i]);
         }
@@ -1614,8 +1601,8 @@ public class StringFuncs implements Constants {
     /**
      * @param nums the numbers to format
      */
-    static public String[] nfs(int nums[], int digits) {
-        String formatted[] = new String[nums.length];
+    static public String[] nfs(int[] nums, int digits) {
+        String[] formatted = new String[nums.length];
         for (int i = 0; i < formatted.length; i++) {
             formatted[i] = nfs(nums[i], digits);
         }
@@ -1649,8 +1636,8 @@ public class StringFuncs implements Constants {
     /**
      * @param nums the numbers to format
      */
-    static public String[] nfp(int nums[], int digits) {
-        String formatted[] = new String[nums.length];
+    static public String[] nfp(int[] nums, int digits) {
+        String[] formatted = new String[nums.length];
         for (int i = 0; i < formatted.length; i++) {
             formatted[i] = nfp(nums[i], digits);
         }
@@ -1661,8 +1648,8 @@ public class StringFuncs implements Constants {
      * @param left  number of digits to the left of the decimal point
      * @param right number of digits to the right of the decimal point
      */
-    static public String[] nf(float nums[], int left, int right) {
-        String formatted[] = new String[nums.length];
+    static public String[] nf(float[] nums, int left, int right) {
+        String[] formatted = new String[nums.length];
         for (int i = 0; i < formatted.length; i++) {
             formatted[i] = nf(nums[i], left, right);
         }
@@ -1695,8 +1682,8 @@ public class StringFuncs implements Constants {
     /**
      * @param right number of digits to the right of the decimal point
      */
-    static public String[] nfc(float nums[], int right) {
-        String formatted[] = new String[nums.length];
+    static public String[] nfc(float[] nums, int right) {
+        String[] formatted = new String[nums.length];
         for (int i = 0; i < formatted.length; i++) {
             formatted[i] = nfc(nums[i], right);
         }
@@ -1732,8 +1719,8 @@ public class StringFuncs implements Constants {
      * @param left  the number of digits to the left of the decimal point
      * @param right the number of digits to the right of the decimal point
      */
-    static public String[] nfs(float nums[], int left, int right) {
-        String formatted[] = new String[nums.length];
+    static public String[] nfs(float[] nums, int left, int right) {
+        String[] formatted = new String[nums.length];
         for (int i = 0; i < formatted.length; i++) {
             formatted[i] = nfs(nums[i], left, right);
         }
@@ -1748,8 +1735,8 @@ public class StringFuncs implements Constants {
      * @param left  the number of digits to the left of the decimal point
      * @param right the number of digits to the right of the decimal point
      */
-    static public String[] nfp(float nums[], int left, int right) {
-        String formatted[] = new String[nums.length];
+    static public String[] nfp(float[] nums, int left, int right) {
+        String[] formatted = new String[nums.length];
         for (int i = 0; i < formatted.length; i++) {
             formatted[i] = nfp(nums[i], left, right);
         }
@@ -2129,43 +2116,43 @@ public class StringFuncs implements Constants {
      * @see StringFuncs#splice(boolean[], boolean, int)
      * @see StringFuncs#arrayCopy(Object, int, Object, int, int)
      */
-    static public boolean[] concat(boolean a[], boolean b[]) {
-        boolean c[] = new boolean[a.length + b.length];
+    static public boolean[] concat(boolean[] a, boolean[] b) {
+        boolean[] c = new boolean[a.length + b.length];
         System.arraycopy(a, 0, c, 0, a.length);
         System.arraycopy(b, 0, c, a.length, b.length);
         return c;
     }
 
-    static public byte[] concat(byte a[], byte b[]) {
-        byte c[] = new byte[a.length + b.length];
+    static public byte[] concat(byte[] a, byte[] b) {
+        byte[] c = new byte[a.length + b.length];
         System.arraycopy(a, 0, c, 0, a.length);
         System.arraycopy(b, 0, c, a.length, b.length);
         return c;
     }
 
-    static public char[] concat(char a[], char b[]) {
-        char c[] = new char[a.length + b.length];
+    static public char[] concat(char[] a, char[] b) {
+        char[] c = new char[a.length + b.length];
         System.arraycopy(a, 0, c, 0, a.length);
         System.arraycopy(b, 0, c, a.length, b.length);
         return c;
     }
 
-    static public int[] concat(int a[], int b[]) {
-        int c[] = new int[a.length + b.length];
+    static public int[] concat(int[] a, int[] b) {
+        int[] c = new int[a.length + b.length];
         System.arraycopy(a, 0, c, 0, a.length);
         System.arraycopy(b, 0, c, a.length, b.length);
         return c;
     }
 
-    static public float[] concat(float a[], float b[]) {
-        float c[] = new float[a.length + b.length];
+    static public float[] concat(float[] a, float[] b) {
+        float[] c = new float[a.length + b.length];
         System.arraycopy(a, 0, c, 0, a.length);
         System.arraycopy(b, 0, c, a.length, b.length);
         return c;
     }
 
-    static public String[] concat(String a[], String b[]) {
-        String c[] = new String[a.length + b.length];
+    static public String[] concat(String[] a, String[] b) {
+        String[] c = new String[a.length + b.length];
         System.arraycopy(a, 0, c, 0, a.length);
         System.arraycopy(b, 0, c, a.length, b.length);
         return c;
@@ -2192,8 +2179,8 @@ public class StringFuncs implements Constants {
      * @webref data:array_functions
      * @see StringFuncs#sort(String[], int)
      */
-    static public boolean[] reverse(boolean list[]) {
-        boolean outgoing[] = new boolean[list.length];
+    static public boolean[] reverse(boolean[] list) {
+        boolean[] outgoing = new boolean[list.length];
         int length1 = list.length - 1;
         for (int i = 0; i < list.length; i++) {
             outgoing[i] = list[length1 - i];
@@ -2201,8 +2188,8 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static public byte[] reverse(byte list[]) {
-        byte outgoing[] = new byte[list.length];
+    static public byte[] reverse(byte[] list) {
+        byte[] outgoing = new byte[list.length];
         int length1 = list.length - 1;
         for (int i = 0; i < list.length; i++) {
             outgoing[i] = list[length1 - i];
@@ -2210,8 +2197,8 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static public char[] reverse(char list[]) {
-        char outgoing[] = new char[list.length];
+    static public char[] reverse(char[] list) {
+        char[] outgoing = new char[list.length];
         int length1 = list.length - 1;
         for (int i = 0; i < list.length; i++) {
             outgoing[i] = list[length1 - i];
@@ -2219,8 +2206,8 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static public int[] reverse(int list[]) {
-        int outgoing[] = new int[list.length];
+    static public int[] reverse(int[] list) {
+        int[] outgoing = new int[list.length];
         int length1 = list.length - 1;
         for (int i = 0; i < list.length; i++) {
             outgoing[i] = list[length1 - i];
@@ -2228,8 +2215,8 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static public float[] reverse(float list[]) {
-        float outgoing[] = new float[list.length];
+    static public float[] reverse(float[] list) {
+        float[] outgoing = new float[list.length];
         int length1 = list.length - 1;
         for (int i = 0; i < list.length; i++) {
             outgoing[i] = list[length1 - i];
@@ -2237,8 +2224,8 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static public String[] reverse(String list[]) {
-        String outgoing[] = new String[list.length];
+    static public String[] reverse(String[] list) {
+        String[] outgoing = new String[list.length];
         int length1 = list.length - 1;
         for (int i = 0; i < list.length; i++) {
             outgoing[i] = list[length1 - i];
@@ -2354,7 +2341,7 @@ public class StringFuncs implements Constants {
      */
     static public String[] splitTokens(String value, String delim) {
         StringTokenizer toker = new StringTokenizer(value, delim);
-        String pieces[] = new String[toker.countTokens()];
+        String[] pieces = new String[toker.countTokens()];
 
         int index = 0;
         while (toker.hasMoreTokens()) {
@@ -2363,77 +2350,77 @@ public class StringFuncs implements Constants {
         return pieces;
     }
 
-    static public boolean[] expand(boolean list[]) {
+    static public boolean[] expand(boolean[] list) {
         return expand(list, list.length > 0 ? list.length << 1 : 1);
     }
 
     /**
      * @param newSize new size for the array
      */
-    static public boolean[] expand(boolean list[], int newSize) {
-        boolean temp[] = new boolean[newSize];
+    static public boolean[] expand(boolean[] list, int newSize) {
+        boolean[] temp = new boolean[newSize];
         System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
         return temp;
     }
 
-    static public byte[] expand(byte list[]) {
+    static public byte[] expand(byte[] list) {
         return expand(list, list.length > 0 ? list.length << 1 : 1);
     }
 
-    static public byte[] expand(byte list[], int newSize) {
-        byte temp[] = new byte[newSize];
+    static public byte[] expand(byte[] list, int newSize) {
+        byte[] temp = new byte[newSize];
         System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
         return temp;
     }
 
-    static public char[] expand(char list[]) {
+    static public char[] expand(char[] list) {
         return expand(list, list.length > 0 ? list.length << 1 : 1);
     }
 
-    static public char[] expand(char list[], int newSize) {
-        char temp[] = new char[newSize];
+    static public char[] expand(char[] list, int newSize) {
+        char[] temp = new char[newSize];
         System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
         return temp;
     }
 
-    static public int[] expand(int list[]) {
+    static public int[] expand(int[] list) {
         return expand(list, list.length > 0 ? list.length << 1 : 1);
     }
 
     //
 
-    static public int[] expand(int list[], int newSize) {
-        int temp[] = new int[newSize];
+    static public int[] expand(int[] list, int newSize) {
+        int[] temp = new int[newSize];
         System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
         return temp;
     }
 
-    static public long[] expand(long list[]) {
+    static public long[] expand(long[] list) {
         return expand(list, list.length > 0 ? list.length << 1 : 1);
     }
 
-    static public long[] expand(long list[], int newSize) {
-        long temp[] = new long[newSize];
+    static public long[] expand(long[] list, int newSize) {
+        long[] temp = new long[newSize];
         System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
         return temp;
     }
 
-    static public float[] expand(float list[]) {
+    static public float[] expand(float[] list) {
         return expand(list, list.length > 0 ? list.length << 1 : 1);
     }
 
-    static public float[] expand(float list[], int newSize) {
-        float temp[] = new float[newSize];
+    static public float[] expand(float[] list, int newSize) {
+        float[] temp = new float[newSize];
         System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
         return temp;
     }
 
-    static public double[] expand(double list[]) {
+    static public double[] expand(double[] list) {
         return expand(list, list.length > 0 ? list.length << 1 : 1);
     }
 
-    static public double[] expand(double list[], int newSize) {
-        double temp[] = new double[newSize];
+    static public double[] expand(double[] list, int newSize) {
+        double[] temp = new double[newSize];
         System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
         return temp;
     }
@@ -2442,12 +2429,12 @@ public class StringFuncs implements Constants {
 
     // STRINGS
 
-    static public String[] expand(String list[]) {
+    static public String[] expand(String[] list) {
         return expand(list, list.length > 0 ? list.length << 1 : 1);
     }
 
-    static public String[] expand(String list[], int newSize) {
-        String temp[] = new String[newSize];
+    static public String[] expand(String[] list, int newSize) {
+        String[] temp = new String[newSize];
         // in case the new size is smaller than list.length
         System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
         return temp;
@@ -2489,31 +2476,31 @@ public class StringFuncs implements Constants {
      * @see StringFuncs#shorten(boolean[])
      * @see StringFuncs#expand(boolean[])
      */
-    static public byte[] append(byte array[], byte value) {
+    static public byte[] append(byte[] array, byte value) {
         array = expand(array, array.length + 1);
         array[array.length - 1] = value;
         return array;
     }
 
-    static public char[] append(char array[], char value) {
+    static public char[] append(char[] array, char value) {
         array = expand(array, array.length + 1);
         array[array.length - 1] = value;
         return array;
     }
 
-    static public int[] append(int array[], int value) {
+    static public int[] append(int[] array, int value) {
         array = expand(array, array.length + 1);
         array[array.length - 1] = value;
         return array;
     }
 
-    static public float[] append(float array[], float value) {
+    static public float[] append(float[] array, float value) {
         array = expand(array, array.length + 1);
         array[array.length - 1] = value;
         return array;
     }
 
-    static public String[] append(String array[], String value) {
+    static public String[] append(String[] array, String value) {
         array = expand(array, array.length + 1);
         array[array.length - 1] = value;
         return array;
@@ -2543,27 +2530,27 @@ public class StringFuncs implements Constants {
      * @see StringFuncs#append(byte[], byte)
      * @see StringFuncs#expand(boolean[])
      */
-    static public boolean[] shorten(boolean list[]) {
+    static public boolean[] shorten(boolean[] list) {
         return subset(list, 0, list.length - 1);
     }
 
-    static public byte[] shorten(byte list[]) {
+    static public byte[] shorten(byte[] list) {
         return subset(list, 0, list.length - 1);
     }
 
-    static public char[] shorten(char list[]) {
+    static public char[] shorten(char[] list) {
         return subset(list, 0, list.length - 1);
     }
 
-    static public int[] shorten(int list[]) {
+    static public int[] shorten(int[] list) {
         return subset(list, 0, list.length - 1);
     }
 
-    static public float[] shorten(float list[]) {
+    static public float[] shorten(float[] list) {
         return subset(list, 0, list.length - 1);
     }
 
-    static public String[] shorten(String list[]) {
+    static public String[] shorten(String[] list) {
         return subset(list, 0, list.length - 1);
     }
 
@@ -2594,9 +2581,9 @@ public class StringFuncs implements Constants {
      * @see StringFuncs#concat(boolean[], boolean[])
      * @see StringFuncs#subset(boolean[], int, int)
      */
-    static final public boolean[] splice(boolean list[],
-            boolean value, int index) {
-        boolean outgoing[] = new boolean[list.length + 1];
+    static final public boolean[] splice(boolean[] list,
+                                         boolean value, int index) {
+        boolean[] outgoing = new boolean[list.length + 1];
         System.arraycopy(list, 0, outgoing, 0, index);
         outgoing[index] = value;
         System.arraycopy(list, index, outgoing, index + 1,
@@ -2604,9 +2591,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public boolean[] splice(boolean list[],
-            boolean value[], int index) {
-        boolean outgoing[] = new boolean[list.length + value.length];
+    static final public boolean[] splice(boolean[] list,
+                                         boolean[] value, int index) {
+        boolean[] outgoing = new boolean[list.length + value.length];
         System.arraycopy(list, 0, outgoing, 0, index);
         System.arraycopy(value, 0, outgoing, index, value.length);
         System.arraycopy(list, index, outgoing, index + value.length,
@@ -2614,9 +2601,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public byte[] splice(byte list[],
-            byte value, int index) {
-        byte outgoing[] = new byte[list.length + 1];
+    static final public byte[] splice(byte[] list,
+                                      byte value, int index) {
+        byte[] outgoing = new byte[list.length + 1];
         System.arraycopy(list, 0, outgoing, 0, index);
         outgoing[index] = value;
         System.arraycopy(list, index, outgoing, index + 1,
@@ -2624,9 +2611,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public byte[] splice(byte list[],
-            byte value[], int index) {
-        byte outgoing[] = new byte[list.length + value.length];
+    static final public byte[] splice(byte[] list,
+                                      byte[] value, int index) {
+        byte[] outgoing = new byte[list.length + value.length];
         System.arraycopy(list, 0, outgoing, 0, index);
         System.arraycopy(value, 0, outgoing, index, value.length);
         System.arraycopy(list, index, outgoing, index + value.length,
@@ -2634,9 +2621,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public char[] splice(char list[],
-            char value, int index) {
-        char outgoing[] = new char[list.length + 1];
+    static final public char[] splice(char[] list,
+                                      char value, int index) {
+        char[] outgoing = new char[list.length + 1];
         System.arraycopy(list, 0, outgoing, 0, index);
         outgoing[index] = value;
         System.arraycopy(list, index, outgoing, index + 1,
@@ -2644,9 +2631,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public char[] splice(char list[],
-            char value[], int index) {
-        char outgoing[] = new char[list.length + value.length];
+    static final public char[] splice(char[] list,
+                                      char[] value, int index) {
+        char[] outgoing = new char[list.length + value.length];
         System.arraycopy(list, 0, outgoing, 0, index);
         System.arraycopy(value, 0, outgoing, index, value.length);
         System.arraycopy(list, index, outgoing, index + value.length,
@@ -2654,9 +2641,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public int[] splice(int list[],
-            int value, int index) {
-        int outgoing[] = new int[list.length + 1];
+    static final public int[] splice(int[] list,
+                                     int value, int index) {
+        int[] outgoing = new int[list.length + 1];
         System.arraycopy(list, 0, outgoing, 0, index);
         outgoing[index] = value;
         System.arraycopy(list, index, outgoing, index + 1,
@@ -2667,9 +2654,9 @@ public class StringFuncs implements Constants {
     // contract() has been removed in revision 0124, use subset() instead.
     // (expand() is also functionally equivalent)
 
-    static final public int[] splice(int list[],
-            int value[], int index) {
-        int outgoing[] = new int[list.length + value.length];
+    static final public int[] splice(int[] list,
+                                     int[] value, int index) {
+        int[] outgoing = new int[list.length + value.length];
         System.arraycopy(list, 0, outgoing, 0, index);
         System.arraycopy(value, 0, outgoing, index, value.length);
         System.arraycopy(list, index, outgoing, index + value.length,
@@ -2677,9 +2664,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public float[] splice(float list[],
-            float value, int index) {
-        float outgoing[] = new float[list.length + 1];
+    static final public float[] splice(float[] list,
+                                       float value, int index) {
+        float[] outgoing = new float[list.length + 1];
         System.arraycopy(list, 0, outgoing, 0, index);
         outgoing[index] = value;
         System.arraycopy(list, index, outgoing, index + 1,
@@ -2687,9 +2674,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public float[] splice(float list[],
-            float value[], int index) {
-        float outgoing[] = new float[list.length + value.length];
+    static final public float[] splice(float[] list,
+                                       float[] value, int index) {
+        float[] outgoing = new float[list.length + value.length];
         System.arraycopy(list, 0, outgoing, 0, index);
         System.arraycopy(value, 0, outgoing, index, value.length);
         System.arraycopy(list, index, outgoing, index + value.length,
@@ -2697,9 +2684,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public String[] splice(String list[],
-            String value, int index) {
-        String outgoing[] = new String[list.length + 1];
+    static final public String[] splice(String[] list,
+                                        String value, int index) {
+        String[] outgoing = new String[list.length + 1];
         System.arraycopy(list, 0, outgoing, 0, index);
         outgoing[index] = value;
         System.arraycopy(list, index, outgoing, index + 1,
@@ -2707,9 +2694,9 @@ public class StringFuncs implements Constants {
         return outgoing;
     }
 
-    static final public String[] splice(String list[],
-            String value[], int index) {
-        String outgoing[] = new String[list.length + value.length];
+    static final public String[] splice(String[] list,
+                                        String[] value, int index) {
+        String[] outgoing = new String[list.length + value.length];
         System.arraycopy(list, 0, outgoing, 0, index);
         System.arraycopy(value, 0, outgoing, index, value.length);
         System.arraycopy(list, index, outgoing, index + value.length,
@@ -3439,7 +3426,7 @@ public class StringFuncs implements Constants {
      * @see StringFuncs#loadBytes(String)
      * @see StringFuncs#saveBytes(String, byte[])
      */
-    public void saveStrings(String filename, String data[]) {
+    public void saveStrings(String filename, String[] data) {
         saveStrings(saveFile(filename), data);
     }
 
